@@ -1,5 +1,5 @@
 /*
-    Copyright 2010-2012, Felspar Co Ltd. http://support.felspar.com/
+    Copyright 2010-2017, Felspar Co Ltd. http://support.felspar.com/
     Distributed under the Boost Software License, Version 1.0.
     See accompanying file LICENSE_1_0.txt or copy at
         http://www.boost.org/LICENSE_1_0.txt
@@ -23,11 +23,12 @@ std::size_t fostlib::log::detail::log_proxy::tap(
     fostlib::log::detail::scoped_sink_base *s
 ) {
     return queue.synchronous<std::size_t>(
-        boost::lambda::bind(&log_queue::tap_scoped,
-            boost::lambda::_1, boost::this_thread::get_id(), s));
+        [s](auto &a) {
+            return a.tap_scoped(std::this_thread::get_id(), s);
+        });
 }
 std::size_t fostlib::log::detail::log_queue::tap_scoped(
-    boost::thread::id thread, fostlib::log::detail::scoped_sink_base *s
+    std::thread::id thread, fostlib::log::detail::scoped_sink_base *s
 ) {
     scoped_sinks_type &sinks = scoped_taps[thread];
     sinks.push_back(s);
@@ -38,11 +39,12 @@ std::size_t fostlib::log::detail::log_proxy::untap(
     fostlib::log::detail::scoped_sink_base *s
 ) {
     return queue.synchronous<std::size_t>(
-        boost::lambda::bind(&log_queue::untap_scoped,
-            boost::lambda::_1, boost::this_thread::get_id(), s));
+        [s](auto &a) {
+            return a.untap_scoped(std::this_thread::get_id(), s);
+        });
 }
 std::size_t fostlib::log::detail::log_queue::untap_scoped(
-    boost::thread::id thread, fostlib::log::detail::scoped_sink_base *s
+    std::thread::id thread, fostlib::log::detail::scoped_sink_base *s
 ) {
     scoped_sinks_type &sinks = scoped_taps[thread];
     scoped_sinks_type::iterator p;
@@ -63,7 +65,8 @@ void fostlib::log::detail::scoped_sink_base::deregister() {
     fostlib::log::detail::log_proxy::proxy().untap(this);
 }
 void fostlib::log::detail::scoped_sink_base::remote_exec(
-    boost::function0<void> fn
+    std::function<void(void)> fn
 ) {
     fostlib::log::detail::log_proxy::proxy().exec(fn);
 }
+
