@@ -1,5 +1,5 @@
 /*
-    Copyright 2010-2013, Felspar Co Ltd. http://support.felspar.com/
+    Copyright 2010-2017, Felspar Co Ltd. http://support.felspar.com/
     Distributed under the Boost Software License, Version 1.0.
     See accompanying file LICENSE_1_0.txt or copy at
         http://www.boost.org/LICENSE_1_0.txt
@@ -7,6 +7,8 @@
 
 
 #include <fost/log.hpp>
+
+#include <thread>
 
 
 namespace fostlib {
@@ -17,7 +19,7 @@ namespace fostlib {
             class log_queue {
                 typedef std::vector< fostlib::log::detail::scoped_sink_base* >
                     scoped_sinks_type;
-                typedef std::map< boost::thread::id, scoped_sinks_type >
+                typedef std::map<std::thread::id, scoped_sinks_type>
                     scoped_thread_sink_type;
                 scoped_thread_sink_type scoped_taps;
 
@@ -25,43 +27,43 @@ namespace fostlib {
                     global_sinks_type;
                 global_sinks_type global_taps;
 
-                public:
-                    std::size_t log(boost::thread::id, const fostlib::log::message &m);
+            public:
+                std::size_t log(std::thread::id, const fostlib::log::message &m);
 
-                    std::size_t tap_scoped(
-                        boost::thread::id, fostlib::log::detail::scoped_sink_base*);
-                    std::size_t untap_scoped(
-                        boost::thread::id, fostlib::log::detail::scoped_sink_base*);
+                std::size_t tap_scoped(
+                    std::thread::id, fostlib::log::detail::scoped_sink_base*);
+                std::size_t untap_scoped(
+                    std::thread::id, fostlib::log::detail::scoped_sink_base*);
 
-                    std::size_t tap_global(fostlib::log::global_sink_configuration*);
-                    std::size_t untap_global(fostlib::log::global_sink_configuration*);
+                std::size_t tap_global(fostlib::log::global_sink_configuration*);
+                std::size_t untap_global(fostlib::log::global_sink_configuration*);
 
-                    bool exec(boost::function0<void> fn);
+                bool exec(std::function<void(void)> fn);
             };
 
             /// Proxy for the actual logging object which is in another thread
             class log_proxy {
-                in_process< log_queue > queue;
+                in_process<log_queue> queue;
 
                 log_proxy()
-                : queue( new log_queue ) {
+                : queue(new log_queue) {
                 }
 
-                public:
-                    static log_proxy &proxy() {
-                        static log_proxy p;
-                        return p;
-                    }
+            public:
+                static log_proxy &proxy() {
+                    static log_proxy p;
+                    return p;
+                }
 
-                    void log(const fostlib::log::message &m);
+                void log(const fostlib::log::message &m);
 
-                    void exec(boost::function0<void> fn);
+                void exec(std::function<void(void)> fn);
 
-                    std::size_t tap(fostlib::log::detail::scoped_sink_base*);
-                    std::size_t untap(fostlib::log::detail::scoped_sink_base*);
+                std::size_t tap(fostlib::log::detail::scoped_sink_base*);
+                std::size_t untap(fostlib::log::detail::scoped_sink_base*);
 
-                    std::size_t tap(fostlib::log::global_sink_configuration*);
-                    std::size_t untap(fostlib::log::global_sink_configuration*);
+                std::size_t tap(fostlib::log::global_sink_configuration*);
+                std::size_t untap(fostlib::log::global_sink_configuration*);
             };
 
         }
